Fix utilities location, headless setup, tests pass